backend/api/tests/integration/user/snapshots/integration__user__public_user__browse_follower_and_follow-2.snap
---
source: tests/integration/user/public_user.rs
expression: body
---
{
  "followers": [
    {
      "id": "1f241e1b-b537-493f-a230-075cb16315be",
      "username": "test",
      "givenName": "Bobby",
      "familyName": "Tables",
      "profileImage": null,
      "following": false,
      "badge": null,
      "organization": "test org",
      "circles": [],
      "totalAssetCount": 0
    },
    {
      "id": "a641fd6e-e41b-11eb-8176-57df101c2201",
      "username": "test2",
      "givenName": "Scrappy",
      "familyName": "Doo",
      "profileImage": null,
      "following": true,
      "badge": null,
      "organization": "test2 org",
      "circles": [],
      "totalAssetCount": 0
    }
  ],
  "pages": 1,
  "totalFollowerCount": 2
}
