backend/api/tests/integration/user/snapshots/integration__user__public_user__browse_follower_and_unfollow-2.snap
---
source: tests/integration/user/public_user.rs
expression: body

---
{
  "followers": [
    {
      "id": "a641fd6e-e41b-11eb-8176-57df101c2201",
      "username": "test2",
      "givenName": "Scrappy",
      "familyName": "Doo",
      "profileImage": null,
      "organization": "test2 org",
      "persona": [],
      "circles": []
    }
  ],
  "pages": 1,
  "totalFollowerCount": 1
}
