backend/api/tests/integration/user/snapshots/integration__user__public_user__browse_following_and_unfollow-1.snap
---
source: tests/integration/user/public_user.rs
expression: body
---
{
  "followings": [
    {
      "id": "7b96a41c-e406-11eb-8176-efd86dd7f444",
      "username": "test1",
      "givenName": "Post",
      "familyName": "Gres",
      "profileImage": null,
      "following": true,
      "badge": null,
      "languagesSpoken": [
        "en_US"
      ],
      "organization": "test1 org",
      "circles": [],
      "playlistCount": 1,
      "totalAssetCount": 1
    }
  ],
  "pages": 1,
  "totalFollowingCount": 2
}
