backend/api/tests/integration/user/snapshots/integration__user__public_user__browse_public_user.snap
---
source: tests/integration/user/public_user.rs
expression: body

---
{
  "users": [
    {
      "id": "a641fd6e-e41b-11eb-8176-57df101c2201",
      "username": "test2",
      "givenName": "Scrappy",
      "familyName": "Doo",
      "bio": "",
      "profileImage": null,
      "organization": "test2 org",
      "circles": [
        "829606d0-f185-11ec-b9e4-5fadfd7252f6"
      ]
    },
    {
      "id": "7b96a41c-e406-11eb-8176-efd86dd7f444",
      "username": "test1",
      "givenName": "Post",
      "familyName": "Gres",
      "bio": "",
      "profileImage": null,
      "language": "en_US",
      "organization": "test1 org",
      "circles": []
    },
    {
      "id": "1f241e1b-b537-493f-a230-075cb16315be",
      "username": "test",
      "givenName": "Bobby",
      "familyName": "Tables",
      "bio": "",
      "profileImage": null,
      "circles": [
        "829606d0-f185-11ec-b9e4-5fadfd7252f6"
      ]
    }
  ],
  "pages": 1,
  "totalUserCount": 3
}
