backend/api/tests/integration/user/snapshots/integration__user__public_user__browse_user_courses-1.snap
---
source: tests/integration/user/public_user.rs
expression: body
---
{
  "courses": [
    {
      "id": "c6b4e4b2-f3ec-11ec-b8ef-fb3d447b215e",
      "publishedAt": "2022-06-23T18:35:33.636556Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": false,
      "courseData": {
        "draftOrLive": "live",
        "displayName": "course name2",
        "language": "en",
        "description": "live test description",
        "lastEdited": "[last_edited]",
        "privacyLevel": "public",
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {},
        "cover": null,
        "ageRanges": [],
        "affiliations": [],
        "categories": [],
        "additionalResources": [],
        "items": [
          "3a71522a-cd77-11eb-8dc1-af3e35f7c743"
        ]
      }
    }
  ],
  "pages": 1,
  "totalCourseCount": 1
}
