backend/api/tests/integration/user/snapshots/integration__user__public_user__browse_user_courses-2.snap
---
source: tests/integration/user/public_user.rs
expression: body

---
{
  "courses": [
    {
      "id": "ef0c4d42-f3ec-11ec-b8ef-af940a9cfba5",
      "publishedAt": "2022-06-22T18:35:33.636556Z",
      "creatorId": "7b96a41c-e406-11eb-8176-efd86dd7f444",
      "authorId": "7b96a41c-e406-11eb-8176-efd86dd7f444",
      "authorName": "Post Gres",
      "likes": 0,
      "plays": 0,
      "courseData": {
        "draftOrLive": "live",
        "displayName": "course name3",
        "language": "en",
        "description": "live test description",
        "lastEdited": "[last_edited]",
        "privacyLevel": "public",
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {},
        "cover": null,
        "ageRanges": [],
        "affiliations": [],
        "categories": [],
        "additionalResources": [],
        "items": []
      }
    }
  ],
  "pages": 1,
  "totalCourseCount": 1
}
