backend/api/tests/integration/user/snapshots/integration__user__public_user__browse_user_courses.snap
---
source: tests/integration/user/public_user.rs
expression: body

---
{
  "courses": [
    {
      "id": "c6b4e4b2-f3ec-11ec-b8ef-fb3d447b215e",
      "publishedAt": "2022-06-23T18:35:33.636556Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "courseData": {
        "draftOrLive": "live",
        "displayName": "course name2",
        "language": "en",
        "description": "live test description",
        "lastEdited": "[last_edited]",
        "privacyLevel": "public",
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {},
        "cover": null,
        "ageRanges": [],
        "affiliations": [],
        "categories": [],
        "additionalResources": [],
        "items": [
          "3a71522a-cd77-11eb-8dc1-af3e35f7c743"
        ]
      }
    },
    {
      "id": "3a6a3660-f3ec-11ec-b8ef-071747fa2a0d",
      "publishedAt": "2022-06-24T18:35:33.636556Z",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "courseData": {
        "draftOrLive": "live",
        "displayName": "course name1",
        "language": "en",
        "description": "live test description",
        "lastEdited": "[last_edited]",
        "privacyLevel": "public",
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {},
        "cover": null,
        "ageRanges": [],
        "affiliations": [],
        "categories": [],
        "additionalResources": [],
        "items": [
          "0cc084bc-7c83-11eb-9f77-e3218dffb008",
          "3a71522a-cd77-11eb-8dc1-af3e35f7c743"
        ]
      }
    }
  ],
  "pages": 1,
  "totalCourseCount": 2
}
